--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -22,7 +22,7 @@
 <!--                    <a class="nav-link" th:href="@{/home}">Home</a>-->
 <!--                </li>-->
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/login}">Login</a>
+                    <a class="nav-link" th:href="@{/signin}">Login</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/products}">Product</a>
@@ -36,6 +36,7 @@
 </nav>
 <h1 th:text="${message}">Welcome!</h1>
 <p>This is the home page of the Product Catalog.</p>
+
 </body>
 </html>
 
