--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -35,19 +35,21 @@
         </div>
     </div>
 </nav>
+<div class="container">
 <h1>Login</h1>
 <div th:if="${error}" style="color:red" th:text="${error}"></div>
 <form th:action="@{/login}" method="post">
-    <div>
-        <label>Username:</label>
+    <div class="mb-3">
+        <label class="form-label">Username:</label>
         <input type="text" name="username" required />
     </div>
     <div>
-        <label>Password:</label>
+        <label class="form-label">Password:</label>
         <input type="password" name="password" required />
     </div>
-    <button type="submit">Login</button>
+    <button type="submit" class="btn btn-primary">Login</button>
 </form>
 <p>Don't have an account? <a th:href="@{/register}">Register here</a></p>
+</div>
 </body>
 </html>
