--- a/src/main/resources/templates/product_form.html
+++ b/src/main/resources/templates/product_form.html
@@ -30,7 +30,7 @@
             <label for="price" class="form-label">Price:</label>
             <input type="number" step="0.01" id="price" th:field="*{price}" class="form-control" required />
         </div>
-        <div >
+        <div class="mb-3">
             <label for="Catalog">Category:</label>
             <select id="Catalog" th:field="*{category}">
                 <option value="ELECTRONICS">electronics</option>
